--- a/stage02_embellish/config/pop1k7_default.yaml
+++ b/stage02_embellish/config/pop1k7_default.yaml
@@ -7,6 +7,7 @@ data_loader:
   do_augment:       True
 
 model:
+  type:             performer
   d_model:          512
   d_embed:          512
   max_len:          3072
